# reddish-shift

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.toml  config.toml  deny.toml  typos.toml
.github/workflows/: ci.yaml  cicd.yaml  release.yaml
assets/systemd/: reddish-shift.service
crates/post-build/: Cargo.toml  build.rs
crates/self/: Cargo.toml  build.rs
crates/self/src/: calc_colorramp.rs  cli.rs  config.rs  error.rs  gamma_win32gdi.rs  lib.rs  main.rs  types.rs  types_display.rs  types_parse.rs
doc/: redshift-design.md
docs/: redshift-news.md  redshift-readme.md
lib/: Cargo.toml
lib/src/: cli.rs  coproduct.rs  error.rs  lib.rs  location_manual.rs  types.rs  types_parse.rs  utils.rs
scripts/generate/: Cargo.toml  build.rs
src/: calc_colorramp.rs  calc_solar.rs  cli.rs  colorramp.rs  config.rs  config_ini.rs  coproduct.rs  display.rs  error.rs  gamma_drm.rs  gamma_dummy.rs  gamma_randr.rs  gamma_vidmode.rs  gamma_win32gdi.rs  hooks.rs  lib.rs  location_geoclue2.rs  location_manual.rs  main.rs  options.rs  pipeutils.rs  reddish-shift.rs  redshift.rs  signals.rs  solar.rs  systemtime.rs  types.rs  types_display.rs  types_parse.rs  utils.rs
supply-chain/: audits.toml  config.toml
