[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Mahor Foruzesh <mahor1221@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Set color temperature of display according to time of day"
readme = "README.md"
repository = "https://github.com/mahor1221/reddish-shift"
homepage = "https://github.com/mahor1221/reddish-shift"
keywords = ["eye-strain", "gamma", "brightness", "sunrise", "sunset"]
categories = ["command-line-utilities"]

[workspace]
members = ["bin", "lib"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
[workspace.lints.rustdoc]
private-doc-tests = "warn"
unescaped-backticks = "warn"
[workspace.lints.clippy]
panic = "deny"
dbg-macro = "warn"
decimal-literal-representation = "warn"
expect-used = "deny"
explicit-auto-deref = "warn"
get-unwrap = "warn"
manual-let-else = "warn"
missing-enforced-import-renames = "warn"
obfuscated-if-else = "warn"
semicolon-outside-block = "warn"
todo = "warn"
too-many-lines = "warn"
undocumented-unsafe-blocks = "deny"
unimplemented = "warn"
uninlined-format-args = "warn"
unnested-or-patterns = "warn"
unwrap-in-result = "warn"
unwrap-used = "warn"
use-debug = "warn"

[profile.release]
lto = true
strip = true
codegen-units = 1
[profile.ci]
inherits = "dev"
debug = false
[profile.perf]
inherits = "release"
strip = false
debug = 1

[patch.crates-io]
# See https://github.com/clap-rs/clap/issues/5550
clap = { git = "https://github.com/mahor1221/clap.git", branch = "patch" }
