[package]
name = "reddish-shift"
version = "0.1.1"
edition = "2021"
authors = ["Mahor Foruzesh <mahor1221@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Set color temperature of display according to time of day"
readme = "README.md"
repository = "https://github.com/mahor1221/reddish-shift"
homepage = "https://github.com/mahor1221/reddish-shift"
documentation = "https://github.com/mahor1221/reddish-shift"
keywords = ["eye-strain", "gamma", "brightness", "sunrise", "sunset"]
categories = ["command-line-utilities"]
build = "build.rs"

[lib]
name = "reddish_shift"
path = "src/lib.rs"

[workspace]
members = ["scripts/generate"]

[dependencies]
thiserror = "1.0.61"
const_format = "0.2.32"
itertools = "0.13.0"
frunk = "0.4.2"
frunk_core = "0.4.2"

# cli
clap = { version = "4.5.7", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anstream = "0.6.14"
anstyle = "1.0.7"
exitcode = "1.1.2"
ctrlc = { version = "3.4.4", features = ["termination"] }

# config
dirs = "5.0.1"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"

chrono = "0.4.38"

[target.'cfg(unix)'.dependencies]
x11rb = { version = "0.13.1", features = ["xf86vidmode", "randr"] }
drm = "0.12.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57.0", features = [
  "Win32_Graphics_Gdi",
  "Win32_UI_ColorSystem",
] }

[dev-dependencies]
insta = "1.39.0"
anyhow = "1.0.86"

[build-dependencies]
anyhow = "1.0.86"
cfg_aliases = "0.2.1"
vergen = { version = "8.3.1", features = ["cargo", "git", "gitcl", "rustc"] }

[workspace.lints.rust]
unsafe_code = "warn"
[workspace.lints.rustdoc]
private-doc-tests = "warn"
unescaped-backticks = "warn"
[workspace.lints.clippy]
panic = "deny"
dbg-macro = "warn"
decimal-literal-representation = "warn"
expect-used = "deny"
explicit-auto-deref = "warn"
get-unwrap = "warn"
manual-let-else = "warn"
missing-enforced-import-renames = "warn"
obfuscated-if-else = "warn"
semicolon-outside-block = "warn"
todo = "warn"
too-many-lines = "warn"
undocumented-unsafe-blocks = "deny"
unimplemented = "warn"
uninlined-format-args = "warn"
unnested-or-patterns = "warn"
unwrap-in-result = "warn"
unwrap-used = "warn"
use-debug = "warn"

[lints]
workspace = true

[profile.release]
lto = true
strip = true
codegen-units = 1
[profile.ci]
inherits = "dev"
debug = false
[profile.perf]
inherits = "release"
strip = false
debug = 1

[patch.crates-io]
# See https://github.com/clap-rs/clap/issues/5550
clap = { git = "https://github.com/mahor1221/clap.git", branch = "patch" }

[package.metadata.deb]
license-file = ["LICENSE", "0"]
depends = "$auto"
section = "utilities"
assets = [
  [
    "target/release/reddish-shift",
    "usr/bin/",
    "755",
  ],
  [
    "LICENSE",
    "usr/share/licenses/reddish-shift/",
    "644",
  ],
  [
    "README.md",
    "usr/share/doc/reddish-shift/",
    "644",
  ],
  [
    "CHANGELOG.md",
    "usr/share/doc/reddish-shift/",
    "644",
  ],
  [
    "config.toml",
    "usr/share/doc/reddish-shift/",
    "644",
  ],
  [
    "target/release/completion/_reddish-shift",
    "usr/share/zsh/site-functions/",
    "644",
  ],
  [
    "target/release/completion/reddish-shift.bash",
    "usr/share/bash-completion/completions/reddish-shift",
    "644",
  ],
  [
    "target/release/completion/reddish-shift.fish",
    "usr/share/fish/completions/",
    "644",
  ],
  [
    "target/release/completion/reddish-shift.elv",
    "usr/share/elvish/lib/",
    "644",
  ],
  [
    "target/release/man1/*",
    "usr/share/man/man1/",
    "644",
  ],
  [
    "assets/systemd/reddish-shift.service",
    "/usr/lib/systemd/user/",
    "644",
  ],
]
