[package]
name = "post-build"
version = "0.0.0"
edition = "2021"
authors = ["Mahor Foruzesh <mahor1221@gmail.com>"]
license = "GPL-3.0-or-later"
build = "build.rs"

[build-dependencies]
anyhow = "1.0"
clap = { version = "*", features = ["string"] }
clap_complete = "4.5.6"
clap_mangen = "0.2.22"
reddish-shift = { path = "../self/" }

[lints]
workspace = true
