[package]
name = "reddish-shift"
version = "0.1.1"
edition = "2021"
authors = ["Mahor Foruzesh <mahor1221@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Set color temperature of display according to time of day"
readme = "../../README.md"
repository = "https://github.com/mahor1221/reddish-shift"
homepage = "https://github.com/mahor1221/reddish-shift"
keywords = ["eye-strain", "gamma", "brightness", "sunrise", "sunset"]
categories = ["command-line-utilities"]
build = "build.rs"

[lib]
name = "reddish_shift"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0.61"
const_format = "0.2.32"
itertools = "0.13.0"
frunk = "0.4.2"
frunk_core = "0.4.2"

chrono = "0.4.38"
x11rb = { version = "0.13.1", features = ["xf86vidmode", "randr"] }
drm = "0.12.0"
windows = { version = "0.57.0", features = [
  "Win32_Graphics_Gdi",
  "Win32_UI_ColorSystem",
] }
# required for location_geoclue2.rs
#libc = "0.2"
#gio-sys = "0.18.1"
#glib-sys = "0.18.1"
#gobject-sys = "0.18.0"

# cli
clap = { version = "4.5.7", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anstream = "0.6.14"
anstyle = "1.0.7"
exitcode = "1.1.2"
ctrlc = { version = "3.4.4", features = ["termination"] }

# config
dirs = "5.0.1"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"

[build-dependencies]
anyhow = "1.0.86"
vergen = { version = "8.3.1", features = ["cargo", "git", "gitcl", "rustc"] }

[dev-dependencies]
insta = "1.39.0"
anyhow = "1.0.86"

[lints]
workspace = true
